@@ -43,12 +43,13 @@ setup(
     install_requires=[
         "numpy",
         "rcsb.utils.io >= 0.48",
-        "rcsb.db >= 0.92",
+        "rcsb.db >= 0.942",
         "rcsb.utils.chemref >= 0.28",
         "rcsb.utils.citation >= 0.13",
         "rcsb.utils.config >= 0.25",
         "rcsb.utils.seq >= 0.28",
         "rcsb.utils.ec >= 0.16",
+        "rcsb.utils.go >= 0.11",
         "rcsb.utils.struct >= 0.21",
         "rcsb.utils.taxonomy >= 0.26",
         'statistics; python_version < "3.0"',
